adding needed jar files

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -1,4 +1,5 @@
 FROM arezamoosavi/spark-k8s:spark-3.1.1-java11-python3.7
 
 # Adding file to Container
+COPY ./example/jars $SPARK_HOME/jars
 COPY example/simple_spark.py /opt/work-dir
